--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,13 +1,14 @@
 <!-- Login Form -->
-<form>
+<form #loginForm="ngForm">
   <!-- Email -->
   <div class="mb-3">
     <label class="inline-block mb-2">Email</label>
-    <input type="email"
+    <input type="email" name="email" [(ngModel)]="credentials.email"
       class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
         duration-500 focus:outline-none rounded bg-transparent
         focus:border-indigo-400"
       placeholder="Enter Email" />
+      <!-- <input v[alue]="" (change)=""> -->
   </div>
   <!-- Password -->
   <div class="mb-3">
@@ -23,3 +24,4 @@
     Submit
   </button>
 </form>
+<div>{{ loginForm.autocomplete}}</div>
