--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,27 +1,33 @@
 <!-- Login Form -->
-<form #loginForm="ngForm">
+<form #loginForm="ngForm" (ngSubmit)="login()">
   <!-- Email -->
   <div class="mb-3">
     <label class="inline-block mb-2">Email</label>
-    <input type="email" name="email" [(ngModel)]="credentials.email"
+    <input #email="ngModel"
+    type="email" name="email" [(ngModel)]="credentials.email"
       class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
         duration-500 focus:outline-none rounded bg-transparent
         focus:border-indigo-400"
-      placeholder="Enter Email" />
+      placeholder="Enter Email" required pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?" />
       <!-- <input v[alue]="" (change)=""> -->
+      <p *ngIf="email.errors && email.touched && email.dirty" class="text-red-400">Email is valid</p>
   </div>
   <!-- Password -->
   <div class="mb-3">
     <label class="inline-block mb-2">Password</label>
-    <input type="password"
+    <input #password="ngModel"
+    name="password" [(ngModel)]="credentials.password"
+    type="password"
       class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
       duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-      placeholder="Password" />
+      placeholder="Password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$" />
+      <p *ngIf="password.errors && password.touched && password.dirty" class="text-red-400">Password is valid</p>
   </div>
-  <button type="submit"
+  <button type="submit" [disabled]="loginForm.invalid"
     class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition
-      hover:bg-indigo-500">
+      hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
+    >
     Submit
   </button>
 </form>
-<div>{{ loginForm.autocomplete}}</div>
+<!-- <div>{{ loginForm.autocomplete}}</div> -->
