--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -36,7 +36,7 @@
   <!-- Phone Number -->
   <div class="mb-3">
     <label class="inline-block mb-2">Phone Number</label>
-    <app-input [control]="phoneNumber" format="(000)000-00000"
+    <app-input [control]="phoneNumber" format="(000)000-0000000"
       placeholder="Enter Phone Number"></app-input>
   </div>
   <button type="submit"
